fix: battle polymorph image height on IOS

--- a/src/components/landingPage/battlePolymorphSection/BattlePolymorph.scss
+++ b/src/components/landingPage/battlePolymorphSection/BattlePolymorph.scss
@@ -104,6 +104,10 @@
       }
       .battle--your--polymorph--characters {
         padding-right: 10px;
+        img {
+          width: 100%;
+          height: 100%;
+        }
         @include md {
           padding: 0 139px;
         }
